@@ -287,13 +287,13 @@ template <HeapType heapType> ALWAYS_INLINE void* Heap::heapAllocate(size_t s)
     // don't spend any time debugging cases where we allocate inside an object's
     // deallocation code.
 
-    size_t numLiveObjects = heap.numLiveObjects;
-    size_t usedBlocks = heap.usedBlocks;
-    size_t i = heap.firstBlockWithPossibleSpace;
-
 #if COLLECT_ON_EVERY_ALLOCATION
     collect();
 #endif
+
+    size_t numLiveObjects = heap.numLiveObjects;
+    size_t usedBlocks = heap.usedBlocks;
+    size_t i = heap.firstBlockWithPossibleSpace;
 
     // if we have a huge amount of extra cost, we'll try to collect even if we still have
     // free cells left.
